feat: add JDK 17 compatibility and lower plugin api-version to 1.18